# rust

./: .gitignore  Cargo.toml
budget-manager/: Cargo.toml
budget-manager/src/: cli.rs  cli_actions.rs  cli_args.rs  db.rs  errors.rs  helpers.rs  main.rs  manager.rs  mapper.rs  web.rs
shell-utils/: Cargo.toml
shell-utils/src/: errors.rs  main.rs  mapper.rs
shell-utils/src/commands/: cat.rs  echo.rs  grep.rs  ls.rs  mod.rs
src/: linked_list.rs  main.rs
todo-app/: Cargo.toml
todo-app/src/: app.rs  errors.rs  helpers.rs  main.rs  ui.rs
