[package]
name = "budget-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
clap = { version = "4.5.40", features = ["derive"] }
clearscreen = "4.0.2"
console = "0.16.0"
dialoguer = "0.11.0"
rocket = { version = "0.5.1", features = ["json"] }
rusqlite = "0.36.0"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
